--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
   "dependencies": {},
   "devDependencies": {
     "@nrwl/cli": "11.4.0",
+    "@nrwl/devkit": "^11.4.0",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-plugin": "^11.4.0",
     "@nrwl/tao": "11.4.0",
     "@nrwl/workspace": "11.4.0",
-    "@types/node": "12.12.38",
+    "@types/node": "14.14.33",
     "dotenv": "6.2.0",
     "prettier": "2.2.1",
     "ts-node": "~9.1.1",
-    "typescript": "~4.0.3"
+    "typescript": "~4.2.3"
   }
 }
