--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@jscutlery/semver": "^1.3.2",
     "@nrwl/cli": "11.4.0",
     "@nrwl/devkit": "^11.4.0",
     "@nrwl/nx-cloud": "latest",
